--- a/index.html
+++ b/index.html
@@ -6,77 +6,90 @@
     <title>Panda's repo</title>
     <link rel="stylesheet" href="style.css">
     <style>
-    .side-container {
-        display: flex;
-        flex-direction: column;
-    }
+        .side-container {
+            display: flex;
+            flex-direction: column;
+        }
 
-    .upper-side {
-        width: 100%;
-        padding: 20px;
-        background-color: rgba(255, 255, 255, 0.8);
-        position: relative;
-        z-index: 1;
-        box-sizing: border-box;
-    }
+        .upper-side {
+            width: 100%;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            position: relative;
+            z-index: 1;
+            box-sizing: border-box;
+            text-align: center; /* Center content inside .upper-side */
+        }
 
-    .lower-side {
-        width: 100%;
-        padding: 20px;
-        overflow-y: auto; /* Enable vertical scrolling if content is long */
-        box-sizing: border-box;
-    }
-    .file-list-container{
-      display: flex;
-      flex-direction: column;
-    }
-    .file-list-container.hidden{
-      display: none;
-    }
-    .loading {
-      font-style: italic;
-    }
-    .file-list {
-      list-style-type: none;
-      padding: 0;
-    }
-    .file-list li{
-      margin-bottom: 10px;
-    }
-    .file-list a{
-      display: block;
-      padding: 10px;
-      background-color: #f0f0f0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-      text-decoration: none;
-      color: #007bff;
-    }
-     .file-list a.downloaded{
-        color: black;
-     }
-    .file-list a:hover {
-      background-color: #e0e0e0;
-    }
-    .search-bar {
-      margin-bottom: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .search-bar::placeholder {
-      font-style: italic;
-      color: grey
-    }
+        .lower-side {
+            width: 100%;
+            padding: 20px;
+            overflow-y: auto; /* Enable vertical scrolling if content is long */
+            box-sizing: border-box;
+        }
+        .file-list-container{
+            display: flex;
+            flex-direction: column;
+        }
+        .file-list-container.hidden{
+            display: none;
+        }
+         .empty-message {
+           font-style: italic;
+         }
+
+        .loading {
+            font-style: italic;
+        }
+        .file-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .file-list li{
+            margin-bottom: 10px;
+        }
+        .file-list a{
+            display: block;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            text-decoration: none;
+            color: #007bff;
+        }
+        .file-list a.downloaded{
+            color: black;
+        }
+        .file-list a:hover {
+            background-color: #e0e0e0;
+        }
+         .search-bar-container {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+        }
+
+        .search-bar {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+             width: 70%;
+         }
+        .search-bar::placeholder {
+          font-style: italic;
+          color: grey
+        }
     </style>
 </head>
 <body>
   <div class="side-container">
       <div class="upper-side">
-          <input class="search-bar" type="text" placeholder="Search for an addon">
-          <h1>Welcome to My Website!</h1>
-           <p>This is a basic webpage hosted on GitHub Pages.</p>
+        <h1>Welcome to My Website!</h1>
+        <div class="search-bar-container">
+           <input class="search-bar" type="text" placeholder="Search for an addon">
+        </div>
+          <img src="image.png" alt="My Image" style="width: 200px; margin: 20px auto;">
           <div class="labels">
             <button id="addons-button">Addons</button>
             <button id="creations-button">Creations</button>
@@ -86,57 +99,67 @@
       <div class="lower-side">
         <div id="addons-container" class="file-list-container hidden">
             <div class="loading">loading...</div>
-           <ul class="file-list" data-dir="addons"></ul>
+            <div class="empty-message hidden">Nothing is here right now...</div>
+            <ul class="file-list" data-dir="addons"></ul>
         </div>
         <div id="creations-container" class="file-list-container hidden">
             <div class="loading">loading...</div>
+            <div class="empty-message hidden">Nothing is here right now...</div>
             <ul class="file-list" data-dir="my_addons"></ul>
         </div>
       </div>
   </div>
 
     <script>
-         const searchBar = document.querySelector('.search-bar');
-         const addonsButton = document.getElementById('addons-button');
-         const creationsButton = document.getElementById('creations-button');
-         const bioLink = document.getElementById('bio-link');
-         const addonsContainer = document.getElementById('addons-container');
-         const creationsContainer = document.getElementById('creations-container');
-         const fileListContainers = [addonsContainer, creationsContainer]
-         const loading = document.querySelectorAll('.loading')
+        const searchBar = document.querySelector('.search-bar');
+        const addonsButton = document.getElementById('addons-button');
+        const creationsButton = document.getElementById('creations-button');
+        const bioLink = document.getElementById('bio-link');
+        const addonsContainer = document.getElementById('addons-container');
+        const creationsContainer = document.getElementById('creations-container');
+        const fileListContainers = [addonsContainer, creationsContainer]
+        const loading = document.querySelectorAll('.loading')
 
-         let searchTimeout;
-         let toggleAddonsCount = 0
-         let toggleCreationsCount = 0
-         let canToggleAddons = true
-         let canToggleCreations = true
-         const COOLDOWN_TIME = 4000;
-         const SHOW_HIDE_LIMIT = 4;
+        let searchTimeout;
+        let toggleAddonsCount = 0
+        let toggleCreationsCount = 0
+        let canToggleAddons = true
+        let canToggleCreations = true
+        const COOLDOWN_TIME = 4000;
+        const SHOW_HIDE_LIMIT = 4;
 
-         // Function to fetch and display files from a directory
-         const fetchAndDisplayFiles = async (container, directory) => {
+        // Function to fetch and display files from a directory
+        const fetchAndDisplayFiles = async (container, directory) => {
           const fileList = container.querySelector("ul");
+          const emptyMessage = container.querySelector('.empty-message')
           fileList.innerHTML = '';
-            const apiUrl = `https://api.github.com/repos/PandaHo485/BasicFilesForSRB2Server/contents/${directory}`
-
+           const apiUrl = `https://api.github.com/repos/PandaHo485/BasicFilesForSRB2Server/contents/${directory}`
              try{
                const response = await fetch(apiUrl)
                if(!response.ok) throw new Error("Network error")
                const data = await response.json()
-                data.forEach(item => {
+
+               if(data.length === 0) {
+                emptyMessage.classList.remove('hidden')
+                  container.classList.remove('hidden')
+                 return
+               }
+
+               data.forEach(item => {
                     if (item.type === 'file') {
                         const listItem = document.createElement("li");
                         const link = document.createElement("a");
                         link.href = item.name;
                         link.textContent = item.name;
-                        link.addEventListener('click', function (){
-                           link.classList.add('downloaded')
-                        });
+                         link.addEventListener('click', function (){
+                            link.classList.add('downloaded')
+                         });
                         listItem.appendChild(link);
                         fileList.appendChild(listItem);
                     }
                 });
-                container.classList.remove('hidden')
+
+              container.classList.remove('hidden')
              }
              catch(error){
                  console.log(error)
@@ -145,16 +168,17 @@
                container.querySelector('.loading').style.display = 'none';
              }
         };
-        const hideOtherContainers = (current) => {
+         const hideOtherContainers = (current) => {
           fileListContainers.forEach(container => {
               if (container !== current) {
-                  container.classList.add('hidden')
+                 container.classList.add('hidden')
                   container.querySelector('.loading').style.display = ''
+                  container.querySelector('.empty-message').classList.add('hidden');
               }
           })
         }
 
-         // Show/Hide functionality for addons
+        // Show/Hide functionality for addons
         addonsButton.addEventListener('click', () => {
            if(!canToggleAddons){
               return;
@@ -169,6 +193,7 @@
            addonsContainer.classList.add('hidden')
            addonsButton.textContent = "Addons";
            addonsContainer.querySelector('.loading').style.display = '';
+           addonsContainer.querySelector('.empty-message').classList.add('hidden');
           }
 
            if(toggleAddonsCount > SHOW_HIDE_LIMIT){
@@ -180,7 +205,7 @@
            }
         });
 
-         // Show/Hide functionality for creations
+        // Show/Hide functionality for creations
         creationsButton.addEventListener('click', () => {
            if(!canToggleCreations){
                return;
@@ -195,54 +220,57 @@
             creationsContainer.classList.add('hidden')
             creationsButton.textContent = "Creations"
             creationsContainer.querySelector('.loading').style.display = ''
+            creationsContainer.querySelector('.empty-message').classList.add('hidden');
          }
 
-         if(toggleCreationsCount > SHOW_HIDE_LIMIT){
+          if(toggleCreationsCount > SHOW_HIDE_LIMIT){
             alert("Hey! End this toy game! Download or go!");
             canToggleCreations = false;
-             setTimeout(() => {
-               canToggleCreations = true;
-             }, COOLDOWN_TIME);
-            }
+            setTimeout(() => {
+              canToggleCreations = true;
+            }, COOLDOWN_TIME);
+         }
         });
-        // Search functionality
-        searchBar.addEventListener('input', () => {
-          clearTimeout(searchTimeout);
-          if(searchBar.value.length < 1) {
-            searchBar.placeholder = "Search for an addon"
-             fileListContainers.forEach(container => {
-                   container.classList.remove('hidden');
-             })
-             return
-          }
-          searchBar.placeholder = ''
-            searchTimeout = setTimeout(() => {
+
+          // Search functionality
+          searchBar.addEventListener('input', () => {
+             clearTimeout(searchTimeout);
+            if(searchBar.value.length < 1) {
+                searchBar.placeholder = "Search for an addon"
+                 fileListContainers.forEach(container => {
+                       container.classList.remove('hidden');
+                 })
+                 return
+            }
+           searchBar.placeholder = ''
+             searchTimeout = setTimeout(() => {
                 const searchTerm = searchBar.value.toLowerCase();
                 fileListContainers.forEach(container => {
-                  const fileList = container.querySelectorAll('li a')
-                 fileList.forEach(link => {
-                     const filename = link.textContent.toLowerCase()
-                     const index = filename.indexOf(searchTerm);
-                     if (index > -1) {
-                         let highlighted = filename.substring(0, index)
-                         highlighted += `<span style="background-color:orange;">${filename.substring(index, index+ searchTerm.length)}</span>`
-                         highlighted += filename.substring(index+searchTerm.length)
-                         link.innerHTML = highlighted
-                         link.parentElement.style.display = 'block'
-                     }
-                     else{
+                    const fileList = container.querySelectorAll('li a')
+                    fileList.forEach(link => {
+                       const filename = link.textContent.toLowerCase()
+                       const index = filename.indexOf(searchTerm);
+                       if (index > -1) {
+                            let highlighted = filename.substring(0, index)
+                           highlighted += `<span style="background-color:orange;">${filename.substring(index, index+ searchTerm.length)}</span>`
+                            highlighted += filename.substring(index+searchTerm.length)
+                           link.innerHTML = highlighted
+                           link.parentElement.style.display = 'block'
+                       }
+                       else{
                          link.parentElement.style.display = 'none'
-                     }
-                });
-                if(!container.querySelector('li a:not([style*="display: none;"])')){
-                     container.classList.add('hidden')
-                  }
-                else{
-                   container.classList.remove('hidden')
-                }
-               })
-           }, 2000);
-        });
+                       }
+                  });
+
+                    if(!container.querySelector('li a:not([style*="display: none;"])')){
+                      container.classList.add('hidden')
+                    }
+                    else{
+                       container.classList.remove('hidden')
+                    }
+                })
+             }, 2000);
+         });
 
     </script>
 </body>
