--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             position: relative;
             z-index: 1;
             box-sizing: border-box;
-            text-align: center; /* Center content inside .upper-side */
+            text-align: center;
         }
 
         .lower-side {
             width: 100%;
             padding: 20px;
-            overflow-y: auto; /* Enable vertical scrolling if content is long */
+            overflow-y: auto;
             box-sizing: border-box;
         }
         .file-list-container{
@@ -118,7 +118,7 @@
         const addonsButton = document.getElementById('addons-button');
         const creationsButton = document.getElementById('creations-button');
         const bioLink = document.getElementById('bio-link');
-         const labelsContainer = document.querySelector('.labels')
+        const labelsContainer = document.querySelector('.labels')
         const addonsContainer = document.getElementById('addons-container');
         const creationsContainer = document.getElementById('creations-container');
         const fileListContainers = [addonsContainer, creationsContainer]
@@ -139,15 +139,15 @@
           const apiUrl = `https://api.github.com/repos/PandaHo485/BasicFilesForSRB2Server/contents/${directory}`
 
              try{
-                const response = await fetch(apiUrl)
-                if(!response.ok) throw new Error("Network error")
-                const data = await response.json()
-                 if(data.length === 0) {
-                     emptyMessage.classList.remove('hidden')
-                     container.classList.remove('hidden')
-                     return
-                 }
-                emptyMessage.classList.add('hidden');
+                 const response = await fetch(apiUrl)
+                 if(!response.ok) throw new Error("Network error")
+               const data = await response.json()
+               if(data.length === 0) {
+                  emptyMessage.classList.remove('hidden')
+                   container.classList.remove('hidden')
+                   return
+               }
+               emptyMessage.classList.add('hidden');
                data.forEach(item => {
                     if (item.type === 'file') {
                        const listItem = document.createElement("li");
@@ -161,7 +161,7 @@
                         fileList.appendChild(listItem);
                     }
                 });
-               container.classList.remove('hidden')
+                 container.classList.remove('hidden')
              }
              catch(error){
                  console.log(error)
@@ -173,9 +173,9 @@
          const hideOtherContainers = (current) => {
              fileListContainers.forEach(container => {
                if (container !== current) {
-                  container.classList.add('hidden')
-                  container.querySelector('.loading').style.display = ''
-                   container.querySelector('.empty-message').classList.add('hidden');
+                   container.classList.add('hidden')
+                   container.querySelector('.loading').style.display = ''
+                    container.querySelector('.empty-message').classList.add('hidden');
                }
            })
         }
@@ -186,94 +186,92 @@
             else{
                 button.textContent = button.id.replace('-button', '');
             }
-       }
-
-       const toggleCategory = (container, button, categoryName) => {
-            if(!canToggleAddons && categoryName === 'addons' ){
-                return
-            }
-            if(!canToggleCreations && categoryName === 'creations'){
-                return
-            }
-          labelsContainer.classList.toggle('hidden');
-          button.classList.remove('hidden')
-           hideOtherContainers(container);
-            if(container.classList.contains('hidden')){
-              toggleButton(container, button);
-               if(categoryName === 'addons') toggleAddonsCount++;
-                if(categoryName === 'creations') toggleCreationsCount++;
-                fetchAndDisplayFiles(container,  categoryName === 'addons' ? 'addons' : 'my_addons', container.querySelector('.empty-message'))
-
+        }
+        const toggleCategory = (container, button, categoryName) => {
+           if(!canToggleAddons && categoryName === 'addons' ){
+               return
            }
+           if(!canToggleCreations && categoryName === 'creations'){
+               return
+           }
+         labelsContainer.classList.toggle('hidden');
+         button.classList.remove('hidden')
+         hideOtherContainers(container);
+            if(container.classList.contains('hidden')){
+                toggleButton(container, button);
+               if(categoryName === 'addons') toggleAddonsCount++;
+                 if(categoryName === 'creations') toggleCreationsCount++;
+              fetchAndDisplayFiles(container,  categoryName === 'addons' ? 'addons' : 'my_addons', container.querySelector('.empty-message'))
+
+            }
             else {
-             container.classList.add('hidden');
-             container.querySelector('.loading').style.display = '';
-          }
-            toggleButton(container, button);
+                container.classList.add('hidden');
+                container.querySelector('.loading').style.display = '';
+            }
+           toggleButton(container, button);
            if((categoryName === 'addons' && toggleAddonsCount > SHOW_HIDE_LIMIT) || (categoryName === 'creations' && toggleCreationsCount > SHOW_HIDE_LIMIT)){
-                 alert("Hey! End this toy game! Download or go!");
+                alert("Hey! End this toy game! Download or go!");
                if(categoryName === 'addons') {
                    canToggleAddons = false;
                    setTimeout(() => {
-                      canToggleAddons = true;
+                       canToggleAddons = true;
                    }, COOLDOWN_TIME);
+                }
+               if(categoryName === 'creations'){
+                   canToggleCreations = false;
+                   setTimeout(() => {
+                       canToggleCreations = true;
+                  }, COOLDOWN_TIME);
                }
-              if(categoryName === 'creations'){
-                canToggleCreations = false;
-                 setTimeout(() => {
-                   canToggleCreations = true;
-               }, COOLDOWN_TIME);
            }
-
-           }
-       }
+        }
         // Show/Hide functionality for addons
          addonsButton.addEventListener('click', () => {
               toggleCategory(addonsContainer, addonsButton, 'addons')
          });
         // Show/Hide functionality for creations
         creationsButton.addEventListener('click', () => {
-               toggleCategory(creationsContainer, creationsButton, 'creations')
+              toggleCategory(creationsContainer, creationsButton, 'creations')
        });
 
           // Search functionality
           searchBar.addEventListener('input', () => {
-              clearTimeout(searchTimeout);
+             clearTimeout(searchTimeout);
             if(searchBar.value.length < 1) {
-                searchBar.placeholder = "Search for an addon"
+                 searchBar.placeholder = "Search for an addon"
                fileListContainers.forEach(container => {
-                     container.classList.remove('hidden');
-               })
+                      container.classList.remove('hidden');
+                })
                 return
            }
             searchBar.placeholder = ''
-           searchTimeout = setTimeout(() => {
-                const searchTerm = searchBar.value.toLowerCase();
-               fileListContainers.forEach(container => {
-                  const fileList = container.querySelectorAll('li a')
-                   fileList.forEach(link => {
-                      const filename = link.textContent.toLowerCase()
-                       const index = filename.indexOf(searchTerm);
-                       if (index > -1) {
-                           let highlighted = filename.substring(0, index)
+            searchTimeout = setTimeout(() => {
+                 const searchTerm = searchBar.value.toLowerCase();
+                fileListContainers.forEach(container => {
+                    const fileList = container.querySelectorAll('li a')
+                  fileList.forEach(link => {
+                       const filename = link.textContent.toLowerCase()
+                      const index = filename.indexOf(searchTerm);
+                      if (index > -1) {
+                        let highlighted = filename.substring(0, index)
                           highlighted += `<span style="background-color:orange;">${filename.substring(index, index+ searchTerm.length)}</span>`
                           highlighted += filename.substring(index+searchTerm.length)
                            link.innerHTML = highlighted
-                            link.parentElement.style.display = 'block'
-                       }
-                       else{
-                           link.parentElement.style.display = 'none'
-                      }
-                  });
-                  if(!container.querySelector('li a:not([style*="display: none;"])")){
-                       container.classList.add('hidden')
-                  }
-                   else{
-                      container.classList.remove('hidden')
-                   }
-               })
-           }, 2000);
-        });
+                          link.parentElement.style.display = 'block'
+                     }
+                     else{
+                         link.parentElement.style.display = 'none'
+                     }
+                 });
+                    if(!container.querySelector('li a:not([style*="display: none;"])')){
+                        container.classList.add('hidden')
+                    }
+                    else{
+                       container.classList.remove('hidden')
+                    }
+                })
+            }, 2000);
+         });
     </script>
 </body>
 </html>
